--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,27 +4,29 @@
 <!--[if IE 8]>         <html lang="en" ng-app="tankGame" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="tankGame" class="no-js"> <!--<![endif]-->
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tank game</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-    <!-- bower:css -->
-    <!-- endinject -->
-    <!-- inject:css -->
-    <!-- endinject -->
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Tank game</title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+		<!-- bower:css -->
+		<!-- endinject -->
+		<!-- inject:css -->
+		<!-- endinject -->
 </head>
 <body ng-controller="TankGameController as $ctrl">
-    <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <div keyboard-listener keys="$ctrl.keyDownEvents">
-        <div ng-view></div>
-    </div>
-    <!-- bower:js -->
-    <!-- endinject -->
-    <!-- inject:js -->
-    <!-- endinject -->
+	<!--[if lt IE 7]>
+	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+	<![endif]-->
+	
+	<app-content>
+		<div ng-view></div>
+	</app-content>
+
+	<!-- bower:js -->
+	<!-- endinject -->
+	<!-- inject:js -->
+	<!-- endinject -->
 </body>
 </html>
