Modified app-content layout. Added select-map-dropdown. Added slide-in effect on view. Replaced ng-route with ui-router:

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -21,7 +21,7 @@
 	<![endif]-->
 	
 	<app-content>
-		<div ng-view></div>
+		<div ui-view class="view-slide-in"></div>
 	</app-content>
 
 	<!-- bower:js -->
