Added game states module. Added some entities into play state (Map, Brick, Grass etc). Added loop into play state to fetch Map data Removed sidebar-navbar. Resized game to match full free space on screen (under topbar) Added single-player module to handle game creating for 1 user. Added middleware mock API

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Tank-Game</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <app>
-      <span class="loader">Loading...</span>
+      <h1 class="text-center">Loading...</h1>
     </app>
     <script src="js/vendor.js"></script>
     <script src="js/bundle.js"></script>
